# istat-rest-api-quickstart

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  istat_covid_anpr.py  pyproject.toml  queries.yaml  quickstart.py  samples.py  sdmx-rest.yaml  tox.ini  turismo.py
tests/: test_istat.py  test_queries_istat.yaml  test_sdmx_istat.py
