[tool.poetry]
name = "istat-rest-api"
version = "0.1.0"
description = ""
authors = ["Roberto Polli <robipolli@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
pandasdmx = {url = "https://github.com/dr-leo/pandaSDMX/archive/v1.0.0b2.zip"}
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

