[tool.poetry]
name = "istat-rest-api"
version = "0.1.0"
description = ""
authors = ["Roberto Polli <robipolli@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
pyyaml = "^5.3.1"
pandasdmx = {url = "https://github.com/ioggstream/pandaSDMX/archive/0.9-fix-istat.zip"}

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
